<resources>
    <string name="app_name">Resources</string>
    <string name="just_a_button">Just a Button</string>
    <string name="wubba_lubba_dub_dub">Wubba Lubba Dub Dub!</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="diane">Diane</string>
    <string name="beth">Beth</string>
    <string name="summer">Summer</string>
    <string name="favorite_character">Choose your favorite character:</string>
    <string name="earth_planet">Earth Planet</string>
    <string name="purge_planet">Purge Planet</string>
    <string name="bird_world">Bird World</string>
    <string name="favorite_place">Choose your favorite place:</string>
    <string name="favorite_invention">Choose your favorite invention:</string>
    <string name="click_for_results">Now click for your results</string>
    <string name="black">Black</string>
    <string name="red">Red</string>
    <string name="purple">Purple</string>
    <string name="pink">Pink</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="go_back">Go back</string>
    <string name="pickle_rick">Pickle Rick</string>
    <string name="sunset_with_a_car">Sunset with a car</string>
    <string name="a_message_for_you">A message for you</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="get_schwifty">Get Schwifty!</string>
    <string name="schwifty_tuesdays">I only get Schwifty on C-137 Tuesdays</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="im_mr_meeseeks">I\'m Mr. Meeseeks! Look at me!</string>
    <string name="a_fragment">A fragment</string>
    <string name="another_fragment">Another fragment</string>
    <string name="view_pager">View Pager</string>
    <string name="character_image">Character Image</string>
    <string name="view_model">View Model</string>
    <string name="increase">Increase</string>
    <string name="zero">0</string>
    <string name="view_model_purpose">Model vies: if you rotate the screen, the counter will not reset to zero. That means the changes are preserved even if the setings change.</string>
    <string name="live_data_purpose">Mutable Live Data: saves the data and updates the UI when data changes</string>
</resources>